fixed alignment issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,17 +18,12 @@ a:visited: {
     color: darkred;
 }
 
-#helpMessage {}
-
-.redButton {
-   color: #721c24;
-    
+a:hover {
+    color: darkgray;
 }
 
-.redButton:hover {
-    color: darkred;
 
-}
+
 
 
 .bubbles{
@@ -48,33 +43,7 @@ a:visited: {
 
 }
 
-.customBreak{
-    
-    display: block;
-    margin-top: .75em;
-}
 
-.stronged{
-    font-weight: bold;
-  
-}
-
-
-footer{
-    margin-top: 10%;
-    width: 100%;
-    height: 15%;
-    
-}
-
-.mobileMainImg {
-    
-    height: 20em;
-    width: 100%;
-    margin-top: 1.5em;
-    overflow: hidden;
-    
-}
 .evenRow{
     background-color: gainsboro;
 }
@@ -83,31 +52,9 @@ footer{
     background-color: whitesmoke;
 }
 
-
-.jumbotron{
-    width: 100% !important;
-     overflow: hidden !important;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 100% !important;
-    
-
-}
-
-nav{
-    
-    width: 100% !important;
-    max-width: 100% !important;
-         overflow: hidden !important;
-
-}
-
-body {
+.container > img {
+    text-align: center;
     margin-left: auto;
     margin-right: auto;
 }
 
-*{
-         max-width: 100%;
-
-}
